main.css
/*body {
	background-color: #111;
	color: #eee;
	font-size: 14px;
}
pre {
	margin: auto;
	width: 50%;
}
a {
	color: #88d; 
	text-decoration: none;
}
a:visited {
	color: #d8d; 
}
a:hover {
	color: #44d;
}*/

table, tr, td {
	border: 1px solid white;
	table-layout: fixed;
	border-collapse: collapse;
}

table {
	margin-bottom: 1em;
}

td {
	padding: 0.25em;
}

tr > td {
	vertical-align: top
}

h1, h2, h3, ul {
	margin: 0;
}

td > h3 {
	padding-top: 0.5em;
	margin: 0;
}

p {
	margin-top: 0;
}

footer {
	font-size: 0.75em;
}

ul, li {
	margin-top: 0;
}

.print-only, .hidden {
	display: none;
}

.personal-data-clause {
	font-style: italic;
	font-size: 0.75em;
}

.thesis-title {
	font-style: italic;
}

.document {
	width: 60em;
	margin: auto;
	position: relative;
	font-family: serif;
	font-size: large;
}

.photo {
	width: 13em;
	position: absolute;
	right: 0;
}

.summary {
	width: 45em;
}

.title {
	font-size: 2em;
}

.date {
	line-height: 2em;
}

.blog-title {
	font-size: 3em;
	text-align: center;
	display: block;
	text-align: center;
}

.blog-title a {
	color: #88d;
}

.mail-addr-postfix:before {
	content: " at gmail dot com";
}

.list-description {
	margin-bottom: 0;
}

.list {
	margin-top: 0;
	margin-bottom: 1em;
}

.pre-serif {
	font-family: serif;
	white-space: pre-wrap;
	margin-top: 0;
}

.label {
	color: #555;
}

.bottom-space {
	margin-bottom: 1em;
}

@media print {
	.print-only {
		display: initial;
	}
	.screen-only {
		display: none;
	}
	a {
		color: black;
		text-decoration: none;
	}
	.mail-addr-postfix:before {
		content: "\0040" "gmail" "\002e" "com";
	}
}

